--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: vault-images
     spec:
       containers:
-      - image: bossmanjerry/vault-images:latest
+      - image: bossmanjerry/vault-images:95
         name: vault-images
         resources: {}
 status: {}
