--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
         stage('Docker Push') {
             steps {
                 //Logging into vault
-                withVault(configuration: [disableChildPoliciesOverride: false, timeout: 60, vaultCredentialId: 'vault-jenkins-role', vaultUrl: 'http://16.16.67.55:8200'], vaultSecrets: [[path: 'secrets/creds/my-secret-text', secretValues: [[vaultKey: 'username'], [vaultKey: 'password']]]]) {
+                withVault(configuration: [disableChildPoliciesOverride: false, timeout: 60, vaultCredentialId: 'vault-jenkins-role', vaultUrl: 'http://51.20.137.56:8200'], vaultSecrets: [[path: 'secrets/creds/my-secret-text', secretValues: [[vaultKey: 'username'], [vaultKey: 'password']]]]) {
                     sh 'docker login -u $username -p $password'
                 }
                 sh "docker push bossmanjerry/vault-images:${env.BUILD_NUMBER}"
@@ -25,19 +25,29 @@ pipeline {
         stage('Update Manifest') {
             steps {
                 script {
-                    withVault(configuration: [disableChildPoliciesOverride: false, timeout: 60, vaultCredentialId: 'vault-jenkins-role', vaultUrl: 'http://16.16.67.55'], vaultSecrets: [[path: 'secrets/creds/my-secret-text', secretValues: [[vaultKey: 'github-username'], [vaultKey: 'github-password']]]]) {
+                    // Retrieve GitHub credentials from Vault
+                    def vaultResponse = withVault(
+                        configuration: [
+                            disableChildPoliciesOverride: false,
+                            timeout: 60,
+                            vaultCredentialId: 'vault-jenkins-role',
+                            vaultUrl: 'http://51.20.137.56:8200'
+                        ],
+                        vaultSecrets: [
+                            [path: 'secrets/creds/my-secret-text', secretValues: [[vaultKey: 'username2'], [vaultKey: 'password2']]]
+                        ]
+                    ) {
+                        // Configure Git
                         sh "git config user.email gerardambe@yahoo.com"
                         sh "git config user.name Gerardbulky"
                         
-                        //sh "cat deployment.yaml"
+                        // Modify deployment.yaml
                         sh "sed -i 's+bossmanjerry/vault-images.*+bossmanjerry/vault-images:${env.BUILD_NUMBER}+g' deployment.yaml"
-                        //sh "cat deployment.yaml"
                         
+                        // Add, commit, and push changes to GitHub
                         sh "git add ."
                         sh "git commit -m 'Changed github manifest file: ${env.BUILD_NUMBER}'"
-                    
-                        // Push changes to GitHub using retrieved credentials
-                        sh "git push origin main"
+                        sh 'git push https://$password2@github.com/$username2/install-grafana-usx-ansible.git HEAD:main'
                     }
                 }
             }
