--- a/deployment.yaml
+++ b/deployment.yaml
@@ -30,7 +30,7 @@ metadata:
   labels:
     app: lb-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 5000
     targetPort: 5000
