--- a/application.yaml
+++ b/application.yaml
@@ -4,12 +4,16 @@ metadata:
   name: my-app
   namespace: argocd
 spec:
-  destination:
-    namespace: default
-    server: https://kubernetes.default.svc
   project: default
   source:
-    path: .
     repoURL: https://github.com/Gerardbulky/install-grafana-usx-ansible.git
     targetRevision: HEAD
-  syncPolicy: {}
+    path: .  # Update this to the correct path if needed
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: default  # Ensure this is the namespace where you want to deploy
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+
