--- a/playbook.yml
+++ b/playbook.yml
@@ -2,6 +2,7 @@
 - name: Deploy Application using ArgoCD
   hosts: localhost
   become: yes
+  become_method: sudo
   tasks:
     - name: Create Application
       command: >
