--- a/playbook.yml
+++ b/playbook.yml
@@ -3,6 +3,7 @@
   hosts: localhost
   become: yes
   become_method: sudo
+  become_flags: '-S'
   tasks:
     - name: Create Application
       command: >
