--- a/sample-project.yaml
+++ b/sample-project.yaml
@@ -8,7 +8,7 @@ spec:
   - group: '*'
     kind: '*'
   destinations:
-  - namespace: sample-app
+  - namespace: default
     server: https://kubernetes.default.svc
   orphanedResources:
     warn: false
