--- a/sample-project.yaml
+++ b/sample-project.yaml
@@ -1,16 +1,43 @@
-apiVersion: argoproj.io/v1alpha1
-kind: AppProject
-metadata:
-  name: sample-project
-  namespace: argocd
-spec:
-  clusterResourceWhitelist:
-  - group: '*'
-    kind: '*'
-  destinations:
-  - namespace: default
-    server: https://kubernetes.default.svc
-  orphanedResources:
-    warn: false
-  sourceRepos:
-  - '*'
+configEnabled: true
+config:
+  repositories: |
+    - type: git
+      url: https://github.com/Gerardbulky/install-grafana-usx-ansible.git
+    - name: argo-helm
+      type: helm
+      url: https://argoproj.github.io/argo-helm
+additionalApplications: 
+  - name: server
+    namespace: argocd
+    destination:
+      namespace: argocd
+      server: https://kubernetes.default.svc
+    project: argocd
+    source:
+      helm:
+        version: v3
+        valueFiles:
+          - values.yaml
+          - ../values-override.yaml
+      path: argocd-install/argo-cd
+      repoURL: https://github.com/Gerardbulky/install-grafana-usx-ansible.git
+      targetRevision: HEAD
+    syncPolicy:
+      syncOptions:
+        - CreateNamespace=true
+additionalProjects: 
+  - name: argocd
+    namespace: argocd
+    additionalLabels: {}
+    additionalAnnotations: {}
+    description: Argocd Project
+    sourceRepos:
+      - '*'
+    destinations:
+      - namespace: argocd
+        server: https://kubernetes.default.svc
+    clusterResourceWhitelist:
+      - group: '*'
+        kind: '*'
+    orphanedResources:
+      warn: false
