--- a/sample-project.yaml
+++ b/sample-project.yaml
@@ -1,43 +1,14 @@
-configEnabled: true
-config:
-  repositories: |
-    - type: git
-      url: https://github.com/Gerardbulky/install-grafana-usx-ansible.git
-    - name: argo-helm
-      type: helm
-      url: https://argoproj.github.io/argo-helm
-additionalApplications: 
-  - name: server
-    namespace: argocd
-    destination:
-      namespace: argocd
-      server: https://kubernetes.default.svc
-    project: argocd
-    source:
-      helm:
-        version: v3
-        valueFiles:
-          - values.yaml
-          - ../values-override.yaml
-      path: argocd-install/argo-cd
-      repoURL: https://github.com/Gerardbulky/install-grafana-usx-ansible.git
-      targetRevision: HEAD
-    syncPolicy:
-      syncOptions:
-        - CreateNamespace=true
-additionalProjects: 
-  - name: argocd
-    namespace: argocd
-    additionalLabels: {}
-    additionalAnnotations: {}
-    description: Argocd Project
-    sourceRepos:
-      - '*'
-    destinations:
-      - namespace: argocd
-        server: https://kubernetes.default.svc
-    clusterResourceWhitelist:
-      - group: '*'
-        kind: '*'
-    orphanedResources:
-      warn: false
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: argo-app
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/abhishek67parmar/argo-app.git
+    targetRevision: HEAD
+    path: app-config
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: my-argo-app
