--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: vault-app
+  name: vault-images
   namespace: argocd
 spec:
   project: default
