--- a/deployment.yaml
+++ b/deployment.yaml
@@ -26,6 +26,9 @@ status: {}
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: default
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
   name: lb-service
   labels:
     app: lb-service
